--- a/LinkerPlayer/Themes/Dark.xaml
+++ b/LinkerPlayer/Themes/Dark.xaml
@@ -1,15 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-  <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
-  <Color x:Key="TitleBarBackgroundColor">#597080</Color>
+  <Color x:Key="TitleBarForegroundColor">#C8C8C8</Color>
+  <Color x:Key="TitleBarBackgroundColor">#373737</Color>
 
-  <Color x:Key="MainWindowGradientStartColor">#3B4951</Color>
-  <Color x:Key="MainWindowGradientEndColor">#3B4951</Color>
+  <Color x:Key="MainWindowGradientStartColor">#373737</Color>
+  <Color x:Key="MainWindowGradientEndColor">#525252</Color>
 
-  <Color x:Key="ChildWindowBackgroundColor">#CCCCCC</Color>
+  <Color x:Key="ChildWindowBackgroundColor">#333333</Color>
 
-  <Color x:Key="ControlAccentLightColor">MediumPurple</Color>
-  <Color x:Key="ControlAccentDarkColor">MediumPurple</Color>
+  <Color x:Key="ControlAccentLightColor">#186868</Color>
+  <Color x:Key="ControlAccentDarkColor">#186868</Color>
   <Color x:Key="ControlForegroundColor">White</Color>
   <Color x:Key="ControlBackgroundColor">Transparent</Color>
   <Color x:Key="ControlBorderLightColor">#FFAAAAAA</Color>
@@ -17,65 +17,79 @@
   <Color x:Key="ControlMouseOverColor">SteelBlue</Color>
   <Color x:Key="ControlPressedColor">#FF211AA9</Color>
   <Color x:Key="ControlDisabledColor">Gray</Color>
+  <Color x:Key="ControlThumbFillColor">Transparent</Color>
+  <Color x:Key="ControlThumbBorderColor">White</Color>
 
-  <Color x:Key="DefaultTextColor">Black</Color>
+  <Color x:Key="DefaultTextColor">#C8C8C8</Color>
 
-  <Color x:Key="FirstDarkColor">DarkGray</Color>
-  <Color x:Key="FirstLightColor">LightGray</Color>
-  <Color x:Key="FirstBackgroundColor">#555555</Color>
-  <Color x:Key="PrimaryBackgroundColor">#424242</Color>
-  <Color x:Key="SecondBackgroundColor">White</Color>
-  <Color x:Key="StandardTextForegroundColor">White</Color>
-  <Color x:Key="InactiveSelectionColor">Gray</Color>
+  <Color x:Key="FirstDarkColor">Gray</Color>
+  <Color x:Key="FirstLightColor">Gray</Color>
+  <Color x:Key="FirstBackgroundColor">#1A1A1A</Color>
+  <Color x:Key="PrimaryBackgroundColor">#7E7E7E</Color>
+  <Color x:Key="SecondBackgroundColor">#7E7E7E</Color>
+  <Color x:Key="StandardTextForegroundColor">#4682B4</Color>
+  <Color x:Key="InactiveSelectionColor">#333333</Color>
 
-  <Color x:Key="PlaylistTabForegroundColor">White</Color>
-  <Color x:Key="PlaylistTabBackgroundColor">White</Color>
-  <Color x:Key="PlaylistMouseOverItemForegroundColor">White</Color>
-  <Color x:Key="PlaylistMouseOverItemBackgroundColor">White</Color>
-  <Color x:Key="PlaylistSelectedItemColor">#6B7B82</Color>
+  <Color x:Key="PlaylistTabForegroundColor">#F0F0F0</Color>
+  <Color x:Key="PlaylistTabBackgroundColor">#4F4F4F</Color>
+  <Color x:Key="PlaylistTabBorderColor">#4F4F4F</Color>
+  <Color x:Key="PlaylistTabMouseOverForegroundColor">#F0F0F0</Color>
+  <Color x:Key="PlaylistTabMouseOverBackgroundColor">Black</Color>
+  <Color x:Key="PlaylistTabSelectedForegroundColor">#6B7B82</Color>
+  <Color x:Key="PlaylistTabSelectedBackgroundColor">#6B7B82</Color>
 
-  <Color x:Key="NewPlaylistButtonForegroundColor">SteelBlue</Color>
+  <Color x:Key="NewPlaylistButtonForegroundColor">#C8C8C8</Color>
   <Color x:Key="NewPlaylistButtonBackgroundColor">Transparent</Color>
   <Color x:Key="NewPlaylistButtonMouseOverForegroundColor">#597080</Color>
   <Color x:Key="NewPlaylistButtonMouseOverBackgroundColor">Transparent</Color>
   <Color x:Key="NewPlaylistNamePopupForegroundColor">WhiteSmoke</Color>
   <Color x:Key="NewPlaylistNamePopupBackgroundColor">Black</Color>
 
-  <Color x:Key="TrackListColumnHeaderForegroundColor">White</Color>
-  <Color x:Key="TrackListColumnHeaderBackgroundColor">#252525</Color>
-  <Color x:Key="TrackListItemForegroundColor">White</Color>
-  <Color x:Key="TrackListItemBackgroundAlt1Color">#1D1D1D</Color>
-  <Color x:Key="TrackListItemBackgroundAlt2Color">#232323</Color>
-  <Color x:Key="TrackListSelectedItemItemForegroundColor">Black</Color>
-  <Color x:Key="TrackListSelectedItemItemBackgroundColor">LightGray</Color>
-  <Color x:Key="TrackListMouseOverItemForegroundColor">White</Color>
-  <Color x:Key="TrackListMouseOverItemBackgroundColor">White</Color>
+  <Color x:Key="TrackListColumnHeaderForegroundColor">#F0F0F0</Color>
+  <Color x:Key="TrackListColumnHeaderBackgroundColor">#373737</Color>
+  <Color x:Key="TrackListItemForegroundColor">#F0F0F0</Color>
+  <Color x:Key="TrackListItemBackgroundAlt1Color">#373737</Color>
+  <Color x:Key="TrackListItemBackgroundAlt2Color">#3C3C3C</Color>
+  <Color x:Key="TrackListSelectedItemForegroundColor">#F0F0F0</Color>
+  <Color x:Key="TrackListSelectedItemBackgroundColor">#186868</Color>
+  <Color x:Key="TrackListMouseOverItemForegroundColor">#F0F0F0</Color>
+  <Color x:Key="TrackListMouseOverItemBackgroundColor">Black</Color>
   <Color x:Key="TrackListSelectedItemColor">#6B7B82</Color>
-  <Color x:Key="TrackListTipBackgroundColor">#A0A4A8</Color>
+  <Color x:Key="TrackListTipBackgroundColor">Black</Color>
   <Color x:Key="TrackListTipForegroundColor">#F0F0F0</Color>
 
-  <Color x:Key="PlayerForegroundColor">Black</Color>
-  <Color x:Key="PlayerBackgroundColor">Black</Color>
-  <Color x:Key="PlayerActiveColor">White</Color>
-  <Color x:Key="PlayStartGradientColor">#303030</Color>
-  <Color x:Key="PlayEndGradientColor">#505050</Color>
+  <Color x:Key="PlayerForegroundColor">#C8C8C8</Color>
+  <Color x:Key="PlayerBackgroundColor">#373737</Color>
+  <Color x:Key="PlayerActiveColor">#C8C8C8</Color>
+  <Color x:Key="PlayStartGradientColor">#090909</Color>
+  <Color x:Key="PlayEndGradientColor">#202020</Color>
 
-  <Color x:Key="PlayerControlButtonColor">#DDDDDD</Color>
-  <Color x:Key="PlayerControlButtonPressedColor">#A0A0A0</Color>
+  <Color x:Key="PlayerControlButtonColor">Transparent</Color>
+  <Color x:Key="PlayerControlButtonBorderColor">#BBBBBB</Color>
+  <Color x:Key="PlayerControlButtonPressedColor">#888888</Color>
+  <Color x:Key="PlayerControlButtonMouseOverBorderColor">#888888</Color>
 
-  <Color x:Key="MenuTextForegroundColor">#CCCCCC</Color>
-  <Color x:Key="MenuDisabledTextColor">#808080</Color>
-  <Color x:Key="MenuColor">Gray</Color>
-  <Color x:Key="MenuTextColor">LightGray</Color>
-  <Color x:Key="MenuHighlightColor">#DDDDDD</Color>
-  <Color x:Key="MenuHoverColor">White</Color>
-  <Color x:Key="MenuSelectionColor">WhiteSmoke</Color>
+   <Color x:Key="MenuForegroundColor">#999999</Color>
+  <Color x:Key="MenuBackgroundColor">#999999</Color>
+  <Color x:Key="MenuDisabledColor">Gray</Color>
+  <Color x:Key="MenuTextColor">Gray</Color>
+  <Color x:Key="MenuMouseOverForegroundColor">LightSteelBlue</Color>
+  <Color x:Key="MenuMouseOverBackgroundColor">Black</Color>
+  <Color x:Key="MenuSelectionBackgroundColor">Black</Color>
 
-  <Color x:Key="ImageBackgroundColor">DarkGray</Color>
+  <Color x:Key="ImageBackgroundColor">Black</Color>
 
-  <Color x:Key="SpectrumBackgroundColor">#464646</Color>
-  <Color x:Key="SpectrumStartColor">Steelblue</Color>
-  <Color x:Key="SpectrumEndColor">Yellow</Color>
+  <Color x:Key="ScrollBarTrackColor">#202020</Color>
+  <Color x:Key="ScrollBarThumbColor">#959595</Color>
+  <Color x:Key="ScrollBarArrowForegroundColor">#959595</Color>
+  <Color x:Key="ScrollBarArrowBackgroundColor">Transparent</Color>
+  <Color x:Key="ScrollBarRepeatButtonColor">Transparent</Color>
+
+  <Color x:Key="SpectrumStartColor">#4F4F4F</Color>
+  <Color x:Key="SpectrumEndColor">#373737</Color>
+  <Color x:Key="SpectrumPeakColor">#186868</Color>
+
   <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
+  <Color x:Key="SpectrumBackgroundColor">#FFFFFF</Color>
 
 </ResourceDictionary>
