--- a/LinkerPlayer/Themes/Gray.xaml
+++ b/LinkerPlayer/Themes/Gray.xaml
@@ -16,9 +16,9 @@
   <Color x:Key="ControlBorderDarkColor">#FF888888</Color>
   <Color x:Key="ControlMouseOverColor">SteelBlue</Color>
   <Color x:Key="ControlPressedColor">#FF211AA9</Color>
-  <Color x:Key="ControlBorderColor">White</Color>
-
   <Color x:Key="ControlDisabledColor">Gray</Color>
+  <Color x:Key="ControlThumbFillColor">Transparent</Color>
+  <Color x:Key="ControlThumbBorderColor">White</Color>
 
   <Color x:Key="DefaultTextColor">Black</Color>
 
@@ -27,14 +27,16 @@
   <Color x:Key="FirstBackgroundColor">#FAFAFA</Color>
   <Color x:Key="PrimaryBackgroundColor">#FAFAFA</Color>
   <Color x:Key="SecondBackgroundColor">#F0F0F0</Color>
-  <Color x:Key="StandardTextForeground">#4000000</Color>
+  <Color x:Key="StandardTextForeground">#400000</Color>
   <Color x:Key="InactiveSelectionColor">WhiteSmoke</Color>
 
   <Color x:Key="PlaylistTabForegroundColor">White</Color>
   <Color x:Key="PlaylistTabBackgroundColor">White</Color>
-  <Color x:Key="PlaylistMouseOverItemForegroundColor">White</Color>
-  <Color x:Key="PlaylistMouseOverItemBackgroundColor">White</Color>
-  <Color x:Key="PlaylistSelectedItemColor">#6B7B82</Color>
+  <Color x:Key="PlaylistTabBorderColor">#4F4F4F</Color>
+  <Color x:Key="PlaylistTabMouseOverForegroundColor">White</Color>
+  <Color x:Key="PlaylistTabMouseOverBackgroundColor">White</Color>
+  <Color x:Key="PlaylistTabSelectedForegroundColor">#6B7B82</Color>
+  <Color x:Key="PlaylistTabSelectedBackgroundColor">#6B7B82</Color>
 
   <Color x:Key="NewPlaylistButtonForegroundColor">SteelBlue</Color>
   <Color x:Key="NewPlaylistButtonBackgroundColor">Transparent</Color>
@@ -48,8 +50,8 @@
   <Color x:Key="TrackListItemForegroundColor">White</Color>
   <Color x:Key="TrackListItemBackgroundAlt1Color">LightGray</Color>
   <Color x:Key="TrackListItemBackgroundAlt2Color">DarkGray</Color>
-  <Color x:Key="TrackListSelectedItemItemForegroundColor">White</Color>
-  <Color x:Key="TrackListSelectedItemItemBackgroundColor">DarkGray</Color>
+  <Color x:Key="TrackListSelectedItemForegroundColor">White</Color>
+  <Color x:Key="TrackListSelectedItemBackgroundColor">DarkGray</Color>
   <Color x:Key="TrackListMouseOverItemForegroundColor">White</Color>
   <Color x:Key="TrackListMouseOverItemBackgroundColor">White</Color>
   <Color x:Key="TrackListSelectedItemColor">#6B7B82</Color>
@@ -62,22 +64,32 @@
   <Color x:Key="PlayStartGradientColor">#D0D0D0</Color>
   <Color x:Key="PlayEndGradientColor">#EAEAEA</Color>
 
-  <Color x:Key="PlayerControlButtonColor">#DDDDDD</Color>
-  <Color x:Key="PlayerControlButtonPressedColor">#A0A0A0</Color>
+  <Color x:Key="PlayerControlButtonColor">Transparent</Color>
+  <Color x:Key="PlayerControlButtonBorderColor">#BBBBBB</Color>
+  <Color x:Key="PlayerControlButtonPressedColor">#888888</Color>
+  <Color x:Key="PlayerControlButtonMouseOverBorderColor">#888888</Color>
 
-  <Color x:Key="MenuTextForegroundColor">#000000</Color>
-  <Color x:Key="MenuDisabledTextColor">#808080</Color>
-  <Color x:Key="MenuColor">WhiteSmoke</Color>
+   <Color x:Key="MenuForegroundColor">#999999</Color>
+  <Color x:Key="MenuBackgroundColor">#999999</Color>
+  <Color x:Key="MenuDisabledColor">Gray</Color>
   <Color x:Key="MenuTextColor">Gray</Color>
-  <Color x:Key="MenuHoverColor">LightSteelBlue</Color>
-  <Color x:Key="MenuSelectionColor">Black</Color>
-  <Color x:Key="MenuHighlightColor">#606060</Color>
+  <Color x:Key="MenuMouseOverForegroundColor">LightSteelBlue</Color>
+  <Color x:Key="MenuMouseOverBackgroundColor">Black</Color>
+  <Color x:Key="MenuSelectionBackgroundColor">Black</Color>
 
   <Color x:Key="ImageBackgroundColor">White</Color>
 
-  <Color x:Key="SpectrumBackgroundColor">#DDDDDD</Color>
-  <Color x:Key="SpectrumStartColor">Steelblue</Color>
-  <Color x:Key="SpectrumEndColor">Yellow</Color>
+  <Color x:Key="ScrollBarTrackColor">#202020</Color>
+  <Color x:Key="ScrollBarThumbColor">#959595</Color>
+  <Color x:Key="ScrollBarArrowForegroundColor">#959595</Color>
+  <Color x:Key="ScrollBarArrowBackgroundColor">Transparent</Color>
+  <Color x:Key="ScrollBarRepeatButtonColor">Transparent</Color>
+
+  <Color x:Key="SpectrumStartColor">#2C086A</Color>
+  <Color x:Key="SpectrumEndColor">Black</Color>
+  <Color x:Key="SpectrumPeakColor">#8950F0</Color>
+
   <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
+  <Color x:Key="SpectrumBackgroundColor">#FFFFFF</Color>
 
 </ResourceDictionary>
