--- a/LinkerPlayer/Themes/Midnight.xaml
+++ b/LinkerPlayer/Themes/Midnight.xaml
@@ -1,10 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-  <Color x:Key="TitleBarForegroundColor">#B2CBDB</Color>
-  <Color x:Key="TitleBarBackgroundColor">#597080</Color>
+  <Color x:Key="TitleBarForegroundColor">White</Color>
+  <Color x:Key="TitleBarBackgroundColor">Black</Color>
 
   <Color x:Key="MainWindowGradientStartColor">Black</Color>
   <Color x:Key="MainWindowGradientEndColor">Black</Color>
+  <Color x:Key="MainWindowBorderColor">#3E3E3E</Color>
 
   <Color x:Key="ChildWindowBackgroundColor">#333333</Color>
 
@@ -17,6 +18,8 @@
   <Color x:Key="ControlMouseOverColor">SteelBlue</Color>
   <Color x:Key="ControlPressedColor">#FF211AA9</Color>
   <Color x:Key="ControlDisabledColor">Gray</Color>
+  <Color x:Key="ControlThumbFillColor">Transparent</Color>
+  <Color x:Key="ControlThumbBorderColor">White</Color>
 
   <Color x:Key="DefaultTextColor">White</Color>
 
@@ -28,24 +31,13 @@
   <Color x:Key="StandardTextForegroundColor">#4682B4</Color>
   <Color x:Key="InactiveSelectionColor">#333333</Color>
 
-  <Color x:Key="PlaylistTabForegroundColor">#F0F0F0</Color>
-  <Color x:Key="PlaylistTabBackgroundColor">Black</Color>
-  <Color x:Key="PlaylistMouseOverItemForegroundColor">#F0F0F0</Color>
-  <Color x:Key="PlaylistMouseOverItemBackgroundColor">Black</Color>
-  <Color x:Key="PlaylistSelectedItemColor">#6B7B82</Color>
-
-  <Color x:Key="TrackListColumnHeaderForegroundColor">#F0F0F0</Color>
-  <Color x:Key="TrackListColumnHeaderBackgroundColor">Black</Color>
-  <Color x:Key="TrackListItemForegroundColor">#F0F0F0</Color>
-  <Color x:Key="TrackListItemBackgroundAlt1Color">#1D1D1D</Color>
-  <Color x:Key="TrackListItemBackgroundAlt2Color">#232323</Color>
-  <Color x:Key="TrackListSelectedItemItemForegroundColor">#F0F0F0</Color>
-  <Color x:Key="TrackListSelectedItemItemBackgroundColor">LightSlateGray</Color>
-  <Color x:Key="TrackListMouseOverItemForegroundColor">#F0F0F0</Color>
-  <Color x:Key="TrackListMouseOverItemBackgroundColor">Black</Color>
-  <Color x:Key="TrackListSelectedItemColor">#6B7B82</Color>
-  <Color x:Key="TrackListTipForegroundColor">#F0F0F0</Color>
-  <Color x:Key="TrackListTipBackgroundColor">Black</Color>
+  <Color x:Key="PlaylistTabForegroundColor">#C0C0C0</Color>
+  <Color x:Key="PlaylistTabBackgroundColor">#202020</Color>
+  <Color x:Key="PlaylistTabBorderColor">#777777</Color>
+  <Color x:Key="PlaylistTabMouseOverForegroundColor">#C0C0C0</Color>
+  <Color x:Key="PlaylistTabMouseOverBackgroundColor">#101010</Color>
+  <Color x:Key="PlaylistTabSelectedForegroundColor">#101010</Color>
+  <Color x:Key="PlaylistTabSelectedBackgroundColor">#777777</Color>
 
   <Color x:Key="NewPlaylistButtonForegroundColor">SteelBlue</Color>
   <Color x:Key="NewPlaylistButtonBackgroundColor">Transparent</Color>
@@ -54,28 +46,51 @@
   <Color x:Key="NewPlaylistNamePopupForegroundColor">WhiteSmoke</Color>
   <Color x:Key="NewPlaylistNamePopupBackgroundColor">Black</Color>
 
+  <Color x:Key="TrackListColumnHeaderForegroundColor">#F0F0F0</Color>
+  <Color x:Key="TrackListColumnHeaderBackgroundColor">Black</Color>
+  <Color x:Key="TrackListItemForegroundColor">#F0F0F0</Color>
+  <Color x:Key="TrackListItemBackgroundAlt1Color">#1D1D1D</Color>
+  <Color x:Key="TrackListItemBackgroundAlt2Color">#232323</Color>
+  <Color x:Key="TrackListSelectedItemForegroundColor">#F0F0F0</Color>
+  <Color x:Key="TrackListSelectedItemBackgroundColor">#2C086A</Color>
+  <Color x:Key="TrackListMouseOverItemForegroundColor">#F0F0F0</Color>
+  <Color x:Key="TrackListMouseOverItemBackgroundColor">Black</Color>
+  <!--<Color x:Key="TrackListSelectedItemColor">#6B7B82</Color>-->
+  <Color x:Key="TrackListTipBackgroundColor">Black</Color>
+  <Color x:Key="TrackListTipForegroundColor">#F0F0F0</Color>
+
   <Color x:Key="PlayerForegroundColor">WhiteSmoke</Color>
   <Color x:Key="PlayerBackgroundColor">Black</Color>
   <Color x:Key="PlayerActiveColor">White</Color>
   <Color x:Key="PlayStartGradientColor">#090909</Color>
   <Color x:Key="PlayEndGradientColor">#202020</Color>
 
-  <Color x:Key="PlayerControlButtonColor">#DDDDDD</Color>
-  <Color x:Key="PlayerControlButtonPressedColor">#A0A0A0</Color>
+  <Color x:Key="PlayerControlButtonColor">Transparent</Color>
+  <Color x:Key="PlayerControlButtonBorderColor">#BBBBBB</Color>
+  <Color x:Key="PlayerControlButtonPressedColor">#888888</Color>
+  <Color x:Key="PlayerControlButtonMouseOverBorderColor">#888888</Color>
 
-  <Color x:Key="MenuTextForegroundColor">#CCCCCC</Color>
-  <Color x:Key="MenuDisabledTextColor">#808080</Color>
-  <Color x:Key="MenuColor">#030303</Color>
-  <Color x:Key="MenuTextColor">LightGray</Color>
-  <Color x:Key="MenuHoverColor">White</Color>
-  <Color x:Key="MenuSelectionColor">#E0E0E0</Color>
-  <Color x:Key="MenuHighlightColor">#DDDDDD</Color>
+  <Color x:Key="MenuForegroundColor">#CCCCCC</Color>
+  <Color x:Key="MenuBackgroundColor">#252525</Color>
+  <Color x:Key="MenuDisabledColor">#808080</Color>
+  <Color x:Key="MenuMouseOverForegroundColor">#CCCCCC</Color>
+  <Color x:Key="MenuMouseOverBackgroundColor">#2C086A</Color>
+  <Color x:Key="MenuSelectionForegroundColor">#CCCCCC</Color>
+  <Color x:Key="MenuSelectionBackgroundColor">#2C086A</Color>
 
   <Color x:Key="ImageBackgroundColor">Black</Color>
 
-  <Color x:Key="SpectrumBackgroundColor">#1A1A1A</Color>
-  <Color x:Key="SpectrumStartColor">#526B7F</Color>
-  <Color x:Key="SpectrumEndColor">White</Color>
-  <Color x:Key="SpectrumLineColor">White</Color>
+  <Color x:Key="ScrollBarTrackColor">#202020</Color>
+  <Color x:Key="ScrollBarThumbColor">#959595</Color>
+  <Color x:Key="ScrollBarArrowForegroundColor">#959595</Color>
+  <Color x:Key="ScrollBarArrowBackgroundColor">Transparent</Color>
+  <Color x:Key="ScrollBarRepeatButtonColor">Transparent</Color>
+
+  <Color x:Key="SpectrumStartColor">#2C086A</Color>
+  <Color x:Key="SpectrumEndColor">Black</Color>
+  <Color x:Key="SpectrumPeakColor">#8950F0</Color>
+
+  <Color x:Key="SpectrumLineColor">LightSteelBlue</Color>
+  <Color x:Key="SpectrumBackgroundColor">#FFFFFF</Color>
 
 </ResourceDictionary>
