--- a/LinkerPlayer/UserControls/TitlebarButtons.xaml
+++ b/LinkerPlayer/UserControls/TitlebarButtons.xaml
@@ -37,7 +37,7 @@
         <Setter.Value>
           <ControlTemplate TargetType="{x:Type Button}">
             <Grid Width="48" Height="36">
-              <Border x:Name="border" Background="Black" />
+              <Border x:Name="border" Background="{DynamicResource TitleBarBackgroundBrush}" />
               <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
             </Grid>
 
@@ -81,11 +81,13 @@
         Width="45"
         Height="36"
         Click="SettingsButton_Click"
+        MouseEnter="ButtonMouseEnter"
+        MouseLeave="ButtonMouseLeave"
         Style="{DynamicResource MaximizeMinimizeButton}"
         ToolTip="Settings">
         <Image
-          Width="16"
-          Height="16"
+          Width="20"
+          Height="20"
           Margin="0,0,8,0"
           Opacity="0.6"
           Source="/Images/settings.png" />
