--- a/LinkerPlayer/Windows/MainWindow.xaml
+++ b/LinkerPlayer/Windows/MainWindow.xaml
@@ -3,7 +3,6 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-  xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
   Title="LinkerPlayer"
@@ -12,8 +11,9 @@
   MinWidth="800"
   MinHeight="514"
   AllowsTransparency="True"
+  BorderBrush="{DynamicResource MainWindowBorderBrush}"
+  BorderThickness="1"
   Closing="Window_Closing"
-  FontFamily="{materialDesign:MaterialDesignFont}"
   Icon="/Images/app64.ico"
   Loaded="Window_Loaded"
   StateChanged="Window_StateChanged"
@@ -74,13 +74,13 @@
       HorizontalAlignment="Stretch"
       VerticalAlignment="Stretch" />
 
-    <materialDesign:Snackbar
+    <!--<materialDesign:Snackbar
       Name="InfoSnackbar"
       Grid.Row="1"
       Grid.Column="0"
       Grid.ColumnSpan="3"
       IsActive="False"
-      MessageQueue="{materialDesign:MessageQueue}" />
+      MessageQueue="{materialDesign:MessageQueue}" />-->
 
     <userControls:PlayerControls
       x:Name="PlayerControls"
